# CoralNodeTemplate

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.node_name}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.node_name}}/.github/workflows/: build-and-push-and-run-on-tag.yml
{{cookiecutter.node_name}}/docker/: Dockerfile
{{cookiecutter.node_name}}/{{cookiecutter.node_name}}/: config.json  node.py
{{cookiecutter.node_name}}/{{cookiecutter.node_name}}/algrothms/: core.py
